# GameDay

./: Dockerfile  README.md  db.sqlite3  fly.toml  manage.py  pyproject.toml
gameDay/: asgi.py  settings.py  urls.py  wsgi.py
main_app/: admin.py  forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_alter_comment_game_id_alter_favorite_team_id.py
main_app/static/css/: style.css
main_app/templates/: base.html  game.html  home.html  team.html  team_detail.html
main_app/templates/registration/: login.html  signup.html
